# bd_course

./: .gitignore  postman_collection.json  pyproject.toml
database_course/: db.sqlite3
database_course/accounts/: models.py  serializers.py  urls.py  views.py
database_course/accounts/migrations/: 0001_initial.py  0002_user_role.py
database_course/courses/: models.py  serializers.py  urls.py  views.py
database_course/courses/migrations/: 0001_initial.py
database_course/database_course/: asgi.py  settings.py  urls.py  wsgi.py
database_course/dictionaries/: models.py  serializers.py  urls.py  views.py
database_course/dictionaries/migrations/: 0001_initial.py  0002_seed_user_status_active.py  0003_seed_categories_and_fix_anyany.py  0004_role.py  0005_seed_levels_languages.py  0006_auto_20260117_1420.py  0007_auto_20260117_1421.py
database_course/learning/: models.py  serializers.py  urls.py  views.py
database_course/learning/migrations/: 0001_initial.py
database_course/reviews/: models.py  serializers.py  urls.py  views.py
database_course/reviews/migrations/: 0001_initial.py
database_course/submissions/: models.py  serializers.py  urls.py  views.py
database_course/submissions/migrations/: 0001_initial.py
